bits/stdc++.h library replaced with iomanip

--- a/res/index.html
+++ b/res/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "/swagger/swagger.json",
+        url: "/swagger/swagger.yaml",
         docExpansion: 'none',
         dom_id: '#swagger-ui',
         deepLinking: true,
